<resources>
    <string name="app_name">The Walking School Bus</string>
    <string name="apikey">9BDCC86A–70A2–4C26-A6D2-ABB7AA439517</string>
    <string name="google_maps_API_key">AIzaSyCUvcoec5pIvEJ5ATtx5iLn0LX_J6TSaLE</string>
    <string name="new_user">Create New User</string>
    <string name="name">Name:</string>
    <string name="please_insert_your_name">Please insert your name</string>
    <string name="email">Email:</string>
    <string name="please_insert_your_email_address">Please insert your email address</string>
    <string name="password">Password:</string>
    <string name="please_choose_a_password">Please choose a password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Log In</string>
    <string name="to_server_test_activity">To Server Test Activity</string>
    <string name="welcome_message">Welcome to Walking School Bus!</string>
    <string name="create_account_login">Login</string>
    <string name="message_login">When account has been created please Login:</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_email">Email:</string>
    <string name="hint_please_enter_email">Please enter email</string>
    <string name="login_password">Password:</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="login_act_login">Log In</string>
    <string name="if_you_don_t_have_a_walking_school_bus_account_please_create_one_here">If you don\'t have a Walking School Bus account please create one here:</string>
    <string name="create_new_user">Create New User</string>
    <string name="log_in">Log In</string>
    <string name="who_monitors_me">Who Monitors Me?</string>
    <string name="title_activity_maps">Map</string>
    <string name="alerttitle"> REMOVE USER </string>
    <string name="alertmessage">Do you want to remove user:\n\'%1$s\'\n from list of users you are monitoring?</string>
    <string name="alertbutton">Remove</string>
    <string name="cancelbutton">Cancel</string>
    <string name="alert_Delete_Monitor_Me_Title">Remove User</string>
    <string name="list_of_users_who_monitor_me">List of Users Who Monitor Me</string>
    <string name="add_a_user_to_monitor_me">Add A User To Monitor Me</string>
    <string name="long_press_on_user_you_want_to_remove_from_monitoring_you">Long press on user you want to remove from monitoring you</string>
    <string name="monitoring_me_main_menu">Main Menu</string>
    <string name="alert_dialog_title">REMOVE USER</string>
    <string name="alert_remove">REMOVE</string>
    <string name="alert_cancel">CANCEL</string>
    <string name="toast_response_update_list">"Removed user successfully!"</string>
    <string name="alert_dialog_message">Do you want to remove user:\n\'%1$s\'\n from list of users who monitor you?</string>
    <string name="titile_main_menu">Main Menu</string>
    <string name="btn_logout">logout</string>
    <string name="users_monitoring_me">Users monitoring me</string>
    <string name="users_i_am_monitoring">Users I am Monitoring</string>
    <string name="map">map</string>
    <string name="btn_main_menu_monitoring">Main Menu</string>
    <string name="delete_instructions">Long press on user you want to remove from monitoring. \n Click user to see information about them.</string>
    <string name="title_i_monitor">List of Users Who I Monitor</string>
    <string name="btn_add_user_to_monitor">Add A User To Monitor</string>
    <string name="a_M_O_Email">Email:</string>
    <string name="a_M_O_hint">Type User\'s Email Address</string>
    <string name="a_M_O_title">Add Person You Want To Monitor</string>
    <string name="a_M_O_buttonOk">Confirm</string>
    <string name="a_M_O_btnCancel">Cancel</string>
    <string name="a_P_M_M_title">Add Person To Monitor You</string>
    <string name="a_P_M_M_btnOK">Confirm</string>
    <string name="a_P_M_M_btnCancel">Cancel</string>
    <string name="a_P_M_M_Email">Email:</string>
    <string name="a_P_M_M_hint">Type User\'s Email Address</string>
    <string name="create_Group_title">Create A Group</string>
    <string name="create_Group_description">Group Description:</string>
    <string name="create_Group_hint">Description</string>
    <string name="create_Group_start">Start:</string>
    <string name="create_Group_hint2">Enter Starting Address</string>
    <string name="create_Group_destination">Destination</string>
    <string name="create_Group_hint3">Enter Destination Address</string>
    <string name="create_Group_btnBack">BACK</string>
    <string name="create_Group_btnOK">Create</string>
    <string name="edit_groupILead_title">Edit Group</string>
    <string name="edit_groupILead_text">Click on member to see all users who monitor them. \n
        Long press on a user to remove from the group.</string>
    <string name="groups_ILead_btnCreate">Create A Group</string>
    <string name="groups_ILead_description">Click group to see all members in that group.</string>
    <string name="groups_ILead_title">List of Groups I Lead</string>
    <string name="menu_groupsIlead">Groups I Lead</string>
    <string name="menu_groupsimin">Groups I\'m In</string>
    <string name="alertMessage_delete_member_groups_i_lead">Do you want to remove user:\'%1$s\' from group: \'%2$s\'</string>
    <string name="email_add_others">Email:</string>
    <string name="hint_email_others">Type User\'s Email Address</string>
    <string name="add_person_you_want_to_monitor">Add Person You Want To Monitor</string>
    <string name="confirm_button_others">CONFIRM</string>
    <string name="cancel_button_others">CANCEL</string>
    <string name="title_monitoring_me">Add Person To Monitor You</string>
    <string name="confirm_button_me">CONFIRM</string>
    <string name="cancel_button_me">CANCEL</string>
    <string name="email_monitoring_me">Email:</string>
    <string name="hint_monitoring_me">Type User\'s Email Address</string>
    <string name="alert_dialog_delete_group_I_lead">Do you want to remove group:\n\'%1$s\'\n from list of groups you lead?</string>
    <string name="alert_delete_group">Remove Group I Lead</string>
    <string name="toast_response_update_groups">"Remove group I lead is a success"</string>
    <string name="alert_add_person_to_group">ADD USER TO GROUP</string>
    <string name="alert_add_person_message">Do you want to add this user to group \'%1$s\'?</string>
    <string name="alert_add_to_group">ADD</string>
    <string name="alert_remove_from_group">REMOVE</string>
    <string name="success_remove_monitoring_others">Removed successfully</string>
    <string name="deleted_person_from_group_toast">Removed User successfully from group!</string>
    <string name="cancel_add_monitoring_to_group">CANCEL</string>
    <string name="list_of_all_groups_title">List of All Groups</string>
    <string name="instructions_for_list_groups_activity">Long press on group to add the selected user to be a member of the group</string>
    <string name="click_user_to_remove_add_to_a_walking_group">Click User to remove/add to a walking group</string>
    <string name="add_person_to_group_toast">Successfully added user to group!</string>
    <string name="alert_remove_user_from_group">REMOVE %1$s FROM GROUP</string>
    <string name="alert_remove_user_from_group_message">Do you want to remove %1$s from group \'%2$s\'?</string>
    <string name="list_of_groups_user_is_in_group_ids">List of Groups Monitored User is In (Group IDs)</string>
    <string name="add_user_to_groups">Add %1$s to Groups</string>
    <string name="alertIAmInMessage">Are you sure you want to remove yourself from group: \'%1$s\'?</string>
    <string name="long_press_on_group_to_remove_user_from_group">Long press on group to remove user from group. Click group to see all members in group</string>
    <string name="groups_I_am_in_title">REMOVE YOURSELF FROM THIS GROUP</string>
    <string name="long_press_to_remove_yourself_from_group">Long Press To Remove Yourself From Group!</string>
    <string name="personal_information_button">Personal Information</string>
    <string name="personal_information_title">Personal Information</string>
    <string name="current_grade_child_info">Current Grade: \n (for students)</string>
    <string name="teacher_s_name_child_info">Teacher\'s Name: \n (for students) </string>
    <string name="child_info_title">%1$s\'s Information</string>
    <string name="button_child_group_list">Groups %1$s Is In</string>
    <string name="title_groups_child_in">List of Groups %1$s Is In</string>
    <string name="name_child_info">Name:</string>
    <string name="insert_name_child_info">Insert name</string>
    <string name="email_child_info">Email:</string>
    <string name="insert_email_child_info">Insert email</string>
    <string name="birth_year_child_info">Birth Year:</string>
    <string name="insert_birth_month_child_info">Insert birth month</string>
    <string name="address_child_info">Address:</string>
    <string name="insert_address_child_info">Insert address</string>
    <string name="home_phone_child_info">Home Phone #:</string>
    <string name="insert_home_number_child_info">Insert home number</string>
    <string name="cell_phone_child_info">Cell Phone #:</string>
    <string name="insert_cell_number_child_info">Insert cell number</string>
    <string name="insert_grade_child_info">Insert Grade</string>
    <string name="insert_teacher_s_name_child_info">Insert teacher\'s name</string>
    <string name="emergency_contact_information_child_info">Emergency Contact Information:</string>
    <string name="insert_contact_s_info_child_info">Insert emergency contact info</string>
    <string name="save_edit_child_info">Save Edit</string>
    <string name="cancel_edit_child_info">Cancel Edit</string>
    <string name="groups_child_is_in_child_info">Groups Child Is In</string>
    <string name="insert_birth_year_child_info">Insert birth year</string>
    <string name="birth_month_child_info">Birth Month:</string>
    <string name="name_personal_info">Name:</string>
    <string name="insert_name_personal_info">Insert name</string>
    <string name="email_personal_info">Email:</string>
    <string name="insert_email_personal_info">Insert email</string>
    <string name="birth_year_personal_info">Birth Year:</string>
    <string name="insert_birth_year_personal_info">Insert birth year</string>
    <string name="birth_month_personal_info">Birth Month:</string>
    <string name="insert_birth_month_personal_info">Insert birth month</string>
    <string name="address_personal_info">Address:</string>
    <string name="insert_address_personal_info">Insert address</string>
    <string name="home_phone_personal_info">Home Phone #:</string>
    <string name="insert_home_number_personal_info">Insert home number</string>
    <string name="cell_phone_personal_info">Cell Phone #:</string>
    <string name="insert_cell_number_personal_info">Insert cell number</string>
    <string name="current_grade_personal_info">Current Grade: \n (for students)</string>
    <string name="insert_grade_personal_info">Insert Grade</string>
    <string name="teacher_s_name_personal_info">Teacher\'s Name: \n (for students)</string>
    <string name="insert_teacher_s_name_personal_info">Insert teacher\'s name</string>
    <string name="emergency_contact_information_personal_info">Emergency Contact Information:</string>
    <string name="insert_contact_s_info_personal_info">Insert emergency contact info</string>
    <string name="save_edit_personal_info">Save Edit</string>
    <string name="cancel_edit_personal_info">Cancel Edit</string>
    <string name="title_activity_parent_dashboard">Map</string>
    <string name="title_activity_walk">Map</string>
    <string name="show_leader">Show Leader</string>
    <string name="show_users">Show Users</string>
    <string name="enter_destination1">Enter Destination</string>
</resources>