<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.cmpt276.walkinggroup.app.CreateGroupActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/txtCreateGroupTitle"
        android:layout_width="313dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/chango"
        android:text="@string/create_Group_title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout4"
        android:layout_width="323dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateGroupTitle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="76dp"
                android:layout_height="56dp"
                android:text="@string/create_Group_description" />

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_Group_hint"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_Group_start"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txtStarting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_Group_hint2"
                android:inputType="textPersonName"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_Group_destination"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txtDestination"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/create_Group_hint3"
                android:inputType="textPersonName"
                android:textSize="15sp" />
        </TableRow>

    </TableLayout>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="207dp"
        android:layout_height="68dp"
        android:layout_marginBottom="145dp"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout4">

        <Button
            android:id="@+id/btnCreateCreateGroup"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_Group_btnOK"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="286dp" />

        <Button
            android:id="@+id/btnBackCreateGroup"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_Group_btnBack"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="286dp" />
    </TableRow>

</android.support.constraint.ConstraintLayout>
